# fun_learning

./: CMakeLists.txt  main.cpp
config/: version_info.h.in
data/: network.yaml  neurons.yaml
example/: CMakeLists.txt  main.cpp
include/: activation_fuctions.hpp  neural_layer.hpp  neural_network.hpp  perceptron.hpp  version_info.h
src/: activation_functions.cpp  neural_layer.cpp  neural_network.cpp  perceptron.cpp
